--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "socket.io": "^4.0.0",
-    "socket.io-client": "^4.0.0"
+    "socket.io": "^4.0.0"
+  },
+  "devDependencies": {
+    "socket.io-client": "^4.0.1"
   }
 }
